# pr-slack-notifier

./: .dockerignore  .gitignore  Cargo.toml  Dockerfile  Makefile  README.md  about_this.md  config-sample.json  config.json.example  typos.toml
src/: main.rs
